--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!</span>
+        <span>Aku ada hadiah spesial buat Jasmine</span>
     </div>
     <div class="button">
         <button>
