--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>K</span>
+        <span>J</span>
         <span>A</span>
+        <span>S</span>
         <span>M</span>
-        <span>U</span>
+        <span>I</span>
+        <span>N</span>
+        <span>E</span>
     </div>
   
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!</span>
+        <span>Hallo Beb</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Di Klik Beb</a>
         </button>
         
     </div>
